# poldrack.github.io

./: ._.git  ._README.md  ._criminalprediction  ._images  ._index.html  ._javascripts  ._narps  ._params.json  ._reproducible-workflows  ._stylesheets  .gitignore  CNAME  Makefile  README.md  _config.yml  _quarto.yml  fix_mastodon_link.py  index.html  index.md  index.qmd  params.json  publications.qmd  pyproject.toml  settings.json  talks.qmd
BBSRC/: _config.yml
_includes/: navlinks.html
_posts/: 2010-10-14-  2010-10-14-welcome.md  2010-10-15-my-workflow-for-writing-papers-or-why-i.md  2010-10-19-statistical-redistricting-how-to-save.md  2010-10-my-workflow-for-writing-papers-or-why-i.md  2010-10-statistical-redistricting-how-to-save.md  2010-10-welcome.md  2010-11-10-my-productivity-toolbox.md  2010-11-13-becoming-academic-road-warrior.md  2010-11-21-my-personal-computing-history.md  2010-11-becoming-academic-road-warrior.md  2010-11-my-personal-computing-history.md  2010-11-my-productivity-toolbox.md  2010-12-15-on-carbon-footprints-and-biased.md  2010-12-on-carbon-footprints-and-biased.md  2011-01-01-goals-for-new-year.md  2011-01-goals-for-new-year.md  2011-04-10-why-i-cut-carbs.md  2011-04-why-i-cut-carbs.md  2011-06-30-recent-reads.md  2011-06-recent-reads.md  2011-07-01-my-analysis-of-ohbm-2011-abstracts.md  2011-07-my-analysis-of-ohbm-2011-abstracts.md  2011-10-01-nyt-editorial-fmri-complete-crap.md  2011-10-03-signers-of-letter-to-editor-of-new-york.md  2011-10-04-nyt-letter-to-editor-uncut-version.md  2011-10-nyt-editorial-fmri-complete-crap.md  (+86 more)
(+19 files in other folders)
